--- a/css/styles.css
+++ b/css/styles.css
@@ -266,7 +266,6 @@ address .contact-item.list:last-child {
 }
 
 .hero h1 {
-    text-align: center;
     text-transform: uppercase;
     color: var(--accent-white-color);
     font-weight: 900;
@@ -276,12 +275,12 @@ address .contact-item.list:last-child {
     margin-bottom: 30px;
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
 }
 
 /**-----------------Button-------------------**/
 .button {
-    display: inline-block;
-
+    display: block;
     border: none;
     background-color: var(--accent-color);
     color: var(--accent-white-color);
@@ -289,15 +288,14 @@ address .contact-item.list:last-child {
     font-weight: 700;
     font-size: 16px;
     line-height: 1.87;
-    align-items: center;
-    text-align: center;
+
     letter-spacing: 0.06em;
     cursor: pointer;
     border-radius: 4px;
     padding: 10px 32px;
-    transition-property: color background-color box-shadow;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button.secondary {
@@ -307,6 +305,13 @@ address .contact-item.list:last-child {
     line-height: 1.62;
     letter-spacing: 0.03em;
     padding: 6px 22px;
+}
+
+.button.primary {
+    justify-content: center;
+    align-items: center;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .button.primary,
@@ -689,6 +694,7 @@ footer {
 }
 
 .modal {
+    padding: 40px;
     position: absolute;
     width: 528px;
     height: 521px;
@@ -721,4 +727,57 @@ footer {
     border-radius: 50%;
     border: 1px solid rgba(0, 0, 0, 0.1);
     background-color: var(--accent-white-color);
+}
+.modal-text {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121;
+    margin-bottom: 12px;
+}
+
+textarea {
+    resize: none;
+    height: 120px;
+    width: 100%;
+}
+.form-field {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+}
+.form-field input {
+    margin: 0;
+    padding: 0;
+    padding: 11px 12px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+}
+
+.form-field label {
+    margin: 0;
+    padding: 0;
+    margin-bottom: 4px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+    color: var(--primary-text-color);
+}
+.form-field textarea {
+    margin: 0;
+    padding: 12px 16px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    margin-bottom: 20px;
+}
+.form-field textarea::placeholder {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
 }
