--- a/css/styles.css
+++ b/css/styles.css
@@ -633,6 +633,57 @@ footer {
     background-color: var(--accent-color);
 }
 
+.form-subscription {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    margin-left: 94px;
+    padding-top: 12px;
+}
+.subscription-input {
+    background-color: var(--footer-bg);
+    width: 358px;
+    height: 50px;
+    padding: 15px 16px;
+    margin: 0;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    outline: none;
+}
+
+.subscription-text {
+    padding: 0;
+    margin: 0;
+    margin-bottom: 20px;
+    color: var(--accent-white-color);
+    font-weight: 700;
+    line-height: 1.14;
+    text-transform: uppercase;
+}
+.subscription-input::placeholder {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.01em;
+    color: rgba(255, 255, 255, 0.6);
+}
+.button-subscription {
+    position: relative;
+    padding: 10px 28px;
+    margin: 0;
+    position: absolute;
+    left: 370px;
+    top: 48px;
+    min-width: 200px;
+    height: 50px;
+    text-align: start;
+}
+.send-icon {
+    position: absolute;
+    margin-left: 10px;
+}
+
 /*--------------------Clients------------*/
 .logo-clients {
     display: flex;
@@ -697,7 +748,7 @@ footer {
     padding: 40px;
     position: absolute;
     width: 528px;
-    height: 521px;
+    min-height: 521px;
     background-color: var(--accent-white-color);
     top: 50%;
     left: 50%;
@@ -710,8 +761,8 @@ footer {
 .cross-icon {
     padding: 0;
 
-    width: 11px;
-    height: 11px;
+    width: 18px;
+    height: 18px;
     fill: #000000;
 }
 .modal-button {
@@ -727,6 +778,7 @@ footer {
     border-radius: 50%;
     border: 1px solid rgba(0, 0, 0, 0.1);
     background-color: var(--accent-white-color);
+    transition: fill 550ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-text {
     font-style: normal;
@@ -736,7 +788,7 @@ footer {
     text-align: center;
     letter-spacing: 0.03em;
     color: #212121;
-    margin-bottom: 12px;
+    margin-bottom: 30px;
 }
 
 textarea {
@@ -745,22 +797,31 @@ textarea {
     width: 100%;
 }
 .form-field {
+    position: relative;
     display: flex;
     flex-direction: column;
-    margin-bottom: 10px;
 }
-.form-field input {
+.form-field:nth-of-type(-n + 3) {
+    margin-bottom: 28px;
+}
+
+.form-input {
     margin: 0;
     padding: 0;
     padding: 11px 12px;
+    padding-left: 42px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
+    transition: border 550ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-field label {
+    position: absolute;
+    transform-origin: left bottom;
+    bottom: 100%;
+    transform: translateY(-4px);
     margin: 0;
     padding: 0;
-    margin-bottom: 4px;
     font-weight: 400;
     font-size: 12px;
     line-height: 1.17;
@@ -772,7 +833,7 @@ textarea {
     padding: 12px 16px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
-    margin-bottom: 20px;
+    transition: border 550ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-field textarea::placeholder {
     font-weight: 400;
@@ -780,4 +841,73 @@ textarea {
     line-height: 1.17;
     letter-spacing: 0.01em;
     color: rgba(117, 117, 117, 0.5);
+}
+.modal-icon {
+    position: absolute;
+    top: 50%;
+    left: 12px;
+    transform: translateY(-50%);
+    transition: fill 350ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.cross-icon:hover,
+.form-input:hover + .modal-icon,
+.form-input:focus + .modal-icon {
+    fill: var(--accent-color);
+}
+
+textarea:focus,
+textarea:hover,
+.form-input:focus,
+.form-input:hover {
+    border: 1px solid var(--accent-color);
+    outline: none;
+}
+
+.checkbox {
+    appearance: none;
+    position: absolute;
+}
+.checkbox-icon {
+    display: block;
+    width: 16px;
+    height: 15px;
+    border: 2px solid var(--title-text-color);
+    border-radius: 2px;
+    margin-right: 7px;
+    margin-right: auto;
+    margin-left: auto;
+    transition: background-color 350ms cubic-bezier(0.4, 0, 0.2, 1),
+        border-color 350ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.checkbox:checked + .checkbox-icon {
+    border-color: var(--accent-color);
+    background-color: var(--accent-color);
+    background-image: url('../images/icon-check.svg');
+    background-size: contain;
+    background-origin: border-box;
+}
+.checkbox-label {
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+
+    color: #757575;
+}
+.link-deal {
+    margin-left: 4px;
+    display: inline-block;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    text-decoration-line: underline;
+    color: var(--accent-color);
+}
+.modal-submit {
+    margin-top: 30px;
+    min-width: 200px;
 }
