--- a/css/styles.css
+++ b/css/styles.css
@@ -248,7 +248,8 @@ address .contact-item.list:last-child {
 }
 /**-------------------Hero------------------**/
 
-.overlay {
+.hero {
+    background-color: var(--footer-bg);
     min-width: 1600px;
     min-height: 600px;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
@@ -260,9 +261,6 @@ address .contact-item.list:last-child {
     background-repeat: no-repeat;
     padding-top: 200px;
     padding-bottom: 200px;
-}
-.hero {
-    background-color: var(--footer-bg);
 }
 
 .hero h1 {
@@ -650,6 +648,7 @@ footer {
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
     outline: none;
+    color: rgba(255, 255, 255, 0.6);
 }
 
 .subscription-text {
@@ -748,7 +747,6 @@ footer {
     padding: 40px;
     position: absolute;
     width: 528px;
-    min-height: 521px;
     background-color: var(--accent-white-color);
     top: 50%;
     left: 50%;
@@ -830,6 +828,7 @@ textarea {
 }
 .form-field textarea {
     margin: 0;
+    margin-bottom: 20px;
     padding: 12px 16px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
@@ -889,7 +888,6 @@ textarea:hover,
 .checkbox-label {
     display: flex;
     align-items: center;
-    margin-top: 20px;
 
     font-weight: 400;
     font-size: 14px;
