cheinged color of text

--- a/css/styles.css
+++ b/css/styles.css
@@ -648,7 +648,7 @@ footer {
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
     outline: none;
-    color: rgba(255, 255, 255, 0.6);
+    color: var(--accent-white-color);
 }
 
 .subscription-text {
