--- a/css/styles.css
+++ b/css/styles.css
@@ -69,15 +69,17 @@ body {
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
+}
+.section {
     padding-top: 94px;
     padding-bottom: 94px;
 }
-
 .section-title {
     color: var(--title-text-color);
     font-size: 36px;
     line-height: 1.17;
     text-align: center;
+
     margin-bottom: 50px;
 }
 .current::after {
@@ -248,19 +250,24 @@ address .contact-item.list:last-child {
 }
 /**-------------------Hero------------------**/
 
-.hero {
+.main-section {
     background-color: var(--footer-bg);
+}
+.hero {
     min-width: 1600px;
+    background-size: contain;
     min-height: 600px;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
         url(../images/hero.jpg);
     background-position: center;
-    background-size: contain;
+
     margin-right: auto;
     margin-top: auto;
     background-repeat: no-repeat;
     padding-top: 200px;
     padding-bottom: 200px;
+    /* max-width: 1600px;
+    background-size: cover; */
 }
 
 .hero h1 {
@@ -373,7 +380,7 @@ address .contact-item.list:last-child {
 
 /*--------Секция Чем мы занимаемся------*/
 
-.container.work {
+.work {
     padding-top: 0;
 }
 
@@ -802,6 +809,9 @@ textarea {
 .form-field:nth-of-type(-n + 3) {
     margin-bottom: 28px;
 }
+.form-field :last-child {
+    margin-bottom: 20px;
+}
 
 .form-input {
     margin: 0;
@@ -828,7 +838,7 @@ textarea {
 }
 .form-field textarea {
     margin: 0;
-    margin-bottom: 20px;
+
     padding: 12px 16px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
