--- a/css/styles.css
+++ b/css/styles.css
@@ -805,13 +805,16 @@ textarea {
     position: relative;
     display: flex;
     flex-direction: column;
-}
-.form-field:nth-of-type(-n + 3) {
     margin-bottom: 28px;
 }
-.form-field :last-child {
+
+.form-field:nth-of-type(4) {
     margin-bottom: 20px;
 }
+/* 
+.form-field:last-child {
+    margin-bottom: 20px;
+} */
 
 .form-input {
     margin: 0;
@@ -837,8 +840,6 @@ textarea {
     color: var(--primary-text-color);
 }
 .form-field textarea {
-    margin: 0;
-
     padding: 12px 16px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
