--- a/css/styles.css
+++ b/css/styles.css
@@ -286,7 +286,6 @@ address .contact-item.list:last-child {
     font-weight: 700;
     font-size: 16px;
     line-height: 1.87;
-
     letter-spacing: 0.06em;
     cursor: pointer;
     border-radius: 4px;
@@ -367,7 +366,6 @@ address .contact-item.list:last-child {
     height: 120px;
     border-radius: 4px;
     background-color: var(--button-bg);
-
     margin-bottom: 30px;
 }
 
@@ -802,7 +800,7 @@ textarea {
     margin-bottom: 28px;
 }
 
-.form-field:last-child {
+.form-field:nth-child(4) {
     margin-bottom: 20px;
 }
 
